tests/error/comptime/pointer_difference15.bz
// error: invalid pointer difference operation with type '*const int32'
// note: while evaluating expression at compile time
// note: lhs and rhs addresses point to different allocations
// note: lhs address points to an object in this allocation
// note: allocation was made while evaluating expression at compile time
// note: rhs address points to an object in this allocation
// note: allocation was made while evaluating expression at compile time
// error: failed to evaluate expression at compile time
function test()
{
	(consteval {
		const p = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(p);
		__builtin_inplace_construct(p, 0);
		const q = __builtin_comptime_malloc(int32, 1);
		defer __builtin_comptime_free(q);
		__builtin_inplace_construct(q, 0);

		p - q;
	});
}
